--- a/Frontend/Task1.html
+++ b/Frontend/Task1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<link rel="stylesheet" href="Task2.css">
 <h2>30 Days Codecamp</h2>
 </head>
 <body>
@@ -9,3 +10,5 @@
 <p> Respected Sir,<br></p>
 <p> I am pleased to inform you that Devsnet wants to organize a 30 days codecamp in our college from 6<sup>th</sup>June to 8<sup>th</sup>June. This codecamp will include some major subjects that are placement oriented.<br>I request you to grant the permission for the same.<br><br></p>
 <p> Yours sincerely,<br>Aditi Devgan<br>Student(JU)
+</body>
+</html>
